syntax = "proto3";

option csharp_namespace = "grpcFileTransportServer";

package file;


import "google/protobuf/empty.proto";

service FileService {
  rpc FileDownload(FileInfo) returns (stream BytesContent);
  rpc FileUplad(stream BytesContent) returns (google.protobuf.Empty);
}

message FileInfo {
  string fileName = 1;
  string fileExtension = 2;
}

message BytesContent {
  int64 fileSize = 1;
  bytes buffer = 2;
  int32 readedByte = 3;
  // referans
  FileInfo info = 4; 
}